alterações para os apoiadores
